Handle multiple versions on a per-line basis
